feat(ui): rejilla semanal, tema oscuro y unificacion de las pantallas
El tablero se habia rediseñado, pero explorar y compañeros seguian siendo el
TFG: botones negros, fondo gris azulado de WhatsApp, biografias en cursiva
como testimonios y bloques de "EDAD GENERO PESO". Con dos de cuatro pantallas
sin tocar, el conjunto no podia sostenerse.

Y aunque lo hubieran estado, faltaba lo principal: el backend cruza horarios
al minuto con confianza ponderada y anclas de compromiso, y eso se mostraba
como dos chips grises que decian "Lunes, Martes". La pieza mas trabajada del
sistema se leia como texto que uno se salta.

Rejilla semanal
- Componente nuevo que dibuja el solape: tu semana de fondo, la coincidencia
  encendida encima, y los tramos donde ambos vais siempre con trama ademas de
  color, para que se lean sin depender de percibir el matiz.
- Dos modos: completa con horas para la ficha, compacta para caber en una fila.
- La ventana horaria se calcula de los datos en vez de pintar las 24 h, que
  dejaria la rejilla vacia en dos tercios de su altura.
- Para que fuera posible, el solape viaja estructurado: antes el backend
  mandaba "Martes 19:00-21:00" como texto, suficiente para redactar pero
  inutil para dibujar.

Tema oscuro por defecto, con conmutador que recuerda la eleccion.

Tablero
- Fuera el banner con degradado, saludo grande y anillo de progreso: el
  movimiento por defecto de cualquier plantilla, gastando el mejor espacio de
  la pantalla en decir "Hola, Luis". En su lugar una barra densa con las cifras
  accionables.
- El porcentaje pasa a ser el elemento mejor tratado de cada fila, que es lo
  que corresponde a la salida del producto.
- La meta semanal se mueve al perfil: es un ajuste, no un panel.

Explorar
- No mostraba ningun dato de compatibilidad porque usaba un endpoint sin
  puntuar: se veian perfiles sueltos sin forma de saber si merecia la pena
  escribir. Ahora pasa por el mismo motor que las sugerencias, de modo que hay
  un solo camino de ca